--- a/lib/api/Cargo.toml
+++ b/lib/api/Cargo.toml
@@ -27,8 +27,8 @@ wat = { version = "1.0", optional = true }
 thiserror = "1.0"
 more-asserts = "0.2"
 target-lexicon = { version = "0.11", default-features = false }
-async-wormhole = { version="0.3", optional=true }
-switcheroo = { version="0.2", optional=true }
+#async-wormhole = { version="0.3", optional=true }
+async-wormhole = { git="https://github.com/kaimast/async-wormhole.git", branch="fix-asm", optional=true }
 loupe = "0.1"
 
 [target.'cfg(target_os = "windows")'.dependencies]
@@ -79,7 +79,6 @@ llvm = [
 ]
 async = [
     "async-wormhole",
-    "switcheroo",
     "wasmer-derive/async",
     "wasmer-vm/async",
     "wasmer-engine/async",
