--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ wasmer-engine-dummy = { path = "tests/lib/engine-dummy" }
 tempfile = "3.1"
 loupe = "0.1"
 smol = "1"
-async-wormhole = { git="https://github.com/kaimast/async-wormhole.git", branch="fix-asm"}
+async-wormhole = { git="https://github.com/lunatic-solutions/async-wormhole.git" }
 
 [features]
 # Don't add the compiler features in default, please add them on the Makefile
