--- a/lib/api/Cargo.toml
+++ b/lib/api/Cargo.toml
@@ -28,7 +28,7 @@ thiserror = "1.0"
 more-asserts = "0.2"
 target-lexicon = { version = "0.11", default-features = false }
 #async-wormhole = { version="0.3", optional=true }
-async-wormhole = { git="https://github.com/kaimast/async-wormhole.git", branch="fix-asm", optional=true }
+async-wormhole = { git="https://github.com/lunatic-solutions/async-wormhole.git", optional=true }
 loupe = "0.1"
 
 [target.'cfg(target_os = "windows")'.dependencies]
