--- a/lib/vm/Cargo.toml
+++ b/lib/vm/Cargo.toml
@@ -28,6 +28,9 @@ loupe = { version = "0.1", features = ["enable-indexmap"] }
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["winbase", "memoryapi", "errhandlingapi"] }
 
+[target.'cfg(not(target_os = "windows"))'.dependencies]
+nix = "0.22"
+
 [build-dependencies]
 cc = "1.0"
 
