--- a/lib/api/Cargo.toml
+++ b/lib/api/Cargo.toml
@@ -30,6 +30,7 @@ more-asserts = "0.2"
 async-wormhole = { git="https://github.com/lunatic-solutions/async-wormhole.git", optional=true }
 target-lexicon = { version = "0.12", default-features = false }
 loupe = "0.1"
+tracing = "0.1"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = "0.3"
