--- a/lib/compiler-cranelift/Cargo.toml
+++ b/lib/compiler-cranelift/Cargo.toml
@@ -18,7 +18,7 @@ wasmer-types = { path = "../types", version = "2.1.1", default-features = false,
 cranelift-entity = { version = "0.76", default-features = false }
 cranelift-codegen = { version = "0.76", default-features = false, features = ["x86", "arm64"] }
 cranelift-frontend = { version = "0.76", default-features = false }
-tracing = "0.1"
+tracing = { version="0.1", default-features=false }
 hashbrown = { version = "0.11", optional = true }
 rayon = "1.5"
 more-asserts = "0.2"
