--- a/lib/engine-dylib/Cargo.toml
+++ b/lib/engine-dylib/Cargo.toml
@@ -18,7 +18,7 @@ wasmer-engine = { path = "../engine", version = "2.1.1" }
 wasmer-object = { path = "../object", version = "2.1.1" }
 serde = { version = "1.0", features = ["derive", "rc"] }
 cfg-if = "1.0"
-tracing = { version = "0.1", features = ["log"] }
+tracing = { version = "0.1", default-features=false }
 leb128 = "0.2"
 libloading = "0.7"
 tempfile = "3.1"
