--- a/lib/vfs/Cargo.toml
+++ b/lib/vfs/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 libc = { version = "^0.2", default-features = false, optional = true }
 thiserror = "1"
-tracing = { version = "0.1" }
+tracing = { version = "0.1", default-features=false }
 typetag = { version = "0.1", optional = true }
 serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
 slab = { version = "0.4", optional = true }
