--- a/lib/compiler-llvm/Cargo.toml
+++ b/lib/compiler-llvm/Cargo.toml
@@ -26,7 +26,7 @@ loupe = "0.1"
 
 [dependencies.inkwell]
 package = "inkwell"
-version = "=0.1.0-beta.5"
+version = "0.1"
 default-features = false
 features = ["llvm12-0", "target-x86", "target-aarch64"]
 
